// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gux-disclosure-button #render should render component as expected (1) 1`] = `
<gux-disclosure-button-legacy lang="en">
  <template shadowrootmode="open">
    <div class="gux-disclosure-button-container gux-left">
      <button class="gux-disclosure-button" aria-controls="gux-disclosure-button-panel-i" aria-expanded="false" aria-label="Disclosure button" data-testid="disclosure-button">
        <gux-icon icon-name="fa/caret-right-solid" decorative="">
        </gux-icon>
      </button>
      <div id="gux-disclosure-button-panel-i" class="gux-disclosure-panel" role="region">
        <slot name="panel-content">
        </slot>
      </div>
    </div>
  </template>
  <div slot="panel-content">
    content
  </div>
</gux-disclosure-button-legacy>
`;

exports[`gux-disclosure-button #render should render component as expected (2) 1`] = `
<gux-disclosure-button-legacy lang="en" is-open="">
  <template shadowrootmode="open">
    <div class="gux-disclosure-button-container gux-left">
      <button class="gux-disclosure-button" aria-controls="gux-disclosure-button-panel-i" aria-expanded="true" aria-label="Disclosure button" data-testid="disclosure-button">
        <gux-icon icon-name="fa/caret-left-solid" decorative="">
        </gux-icon>
      </button>
      <div id="gux-disclosure-button-panel-i" class="gux-disclosure-panel gux-active" role="region">
        <slot name="panel-content">
        </slot>
      </div>
    </div>
  </template>
  <div slot="panel-content">
    content
  </div>
</gux-disclosure-button-legacy>
`;

exports[`gux-disclosure-button #render should render component as expected (3) 1`] = `
<gux-disclosure-button-legacy lang="en" position="left">
  <template shadowrootmode="open">
    <div class="gux-disclosure-button-container gux-left">
      <button class="gux-disclosure-button" aria-controls="gux-disclosure-button-panel-i" aria-expanded="false" aria-label="Disclosure button" data-testid="disclosure-button">
        <gux-icon icon-name="fa/caret-right-solid" decorative="">
        </gux-icon>
      </button>
      <div id="gux-disclosure-button-panel-i" class="gux-disclosure-panel" role="region">
        <slot name="panel-content">
        </slot>
      </div>
    </div>
  </template>
  <div slot="panel-content">
    content
  </div>
</gux-disclosure-button-legacy>
`;

exports[`gux-disclosure-button #render should render component as expected (4) 1`] = `
<gux-disclosure-button-legacy lang="en" is-open="" position="left">
  <template shadowrootmode="open">
    <div class="gux-disclosure-button-container gux-left">
      <button class="gux-disclosure-button" aria-controls="gux-disclosure-button-panel-i" aria-expanded="true" aria-label="Disclosure button" data-testid="disclosure-button">
        <gux-icon icon-name="fa/caret-left-solid" decorative="">
        </gux-icon>
      </button>
      <div id="gux-disclosure-button-panel-i" class="gux-disclosure-panel gux-active" role="region">
        <slot name="panel-content">
        </slot>
      </div>
    </div>
  </template>
  <div slot="panel-content">
    content
  </div>
</gux-disclosure-button-legacy>
`;

exports[`gux-disclosure-button #render should render component as expected (5) 1`] = `
<gux-disclosure-button-legacy lang="en" position="right">
  <template shadowrootmode="open">
    <div class="gux-disclosure-button-container gux-right">
      <button class="gux-disclosure-button" aria-controls="gux-disclosure-button-panel-i" aria-expanded="false" aria-label="Disclosure button" data-testid="disclosure-button">
        <gux-icon icon-name="fa/caret-left-solid" decorative="">
        </gux-icon>
      </button>
      <div id="gux-disclosure-button-panel-i" class="gux-disclosure-panel" role="region">
        <slot name="panel-content">
        </slot>
      </div>
    </div>
  </template>
  <div slot="panel-content">
    content
  </div>
</gux-disclosure-button-legacy>
`;

exports[`gux-disclosure-button #render should render component as expected (6) 1`] = `
<gux-disclosure-button-legacy lang="en" is-open="" position="right">
  <template shadowrootmode="open">
    <div class="gux-disclosure-button-container gux-right">
      <button class="gux-disclosure-button" aria-controls="gux-disclosure-button-panel-i" aria-expanded="true" aria-label="Disclosure button" data-testid="disclosure-button">
        <gux-icon icon-name="fa/caret-right-solid" decorative="">
        </gux-icon>
      </button>
      <div id="gux-disclosure-button-panel-i" class="gux-disclosure-panel gux-active" role="region">
        <slot name="panel-content">
        </slot>
      </div>
    </div>
  </template>
  <div slot="panel-content">
    content
  </div>
</gux-disclosure-button-legacy>
`;

exports[`gux-disclosure-button #render should render component as expected (7) 1`] = `
<gux-disclosure-button-legacy lang="en" label="More Info">
  <template shadowrootmode="open">
    <div class="gux-disclosure-button-container gux-left">
      <button class="gux-disclosure-button" aria-controls="gux-disclosure-button-panel-i" aria-expanded="false" aria-label="More Info" data-testid="disclosure-button">
        <gux-icon icon-name="fa/caret-right-solid" decorative="">
        </gux-icon>
      </button>
      <div id="gux-disclosure-button-panel-i" class="gux-disclosure-panel" role="region">
        <slot name="panel-content">
        </slot>
      </div>
    </div>
  </template>
  <div slot="panel-content">
    content
  </div>
</gux-disclosure-button-legacy>
`;
